# random-db

./: README.md  go.mod  main.go
app/: angular.json  package-lock.json  package.json
app/src/app/: app-module.ts  app.ts
app/src/app/components/main/: main.component.html  main.component.ts
db_engine/: CMakeLists.txt  compile.sh  db.c  db.h  main.c
db_engine/io/: io.c
db_engine/src/crud/: crud.c  crud.h
db_engine/src/indexing/: indexing.c  indexing.h
db_engine/src/io/: io.h
db_engine/src/utils/: utils.c  utils.h
server/: server.go
server/data_base/: db.go
